--- a/_config.yml
+++ b/_config.yml
@@ -20,21 +20,20 @@ source-code: https://github.com/elfgage/nobili-weber-genealogical-repository
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: CollectionBuilder-GH 
+title: Nobili-Weber Genealogical Repository 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a template for creating simple digital exhibits
+tagline: Genealogical Archive of the Intersections of the Nobili & Weber Families
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
-# creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+description:This archive includes images and textual memorabilia of the Nobili and Weber Families and their descendants who emmigrated from Europe to the United States.
+author: elfgage
 
 ##########
 # COLLECTION SETTINGS
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: demo-metadata 
+metadata: Nobili Weber1
 
 ##########
 # Site/Organization Branding 
