--- a/_config.yml
+++ b/_config.yml
@@ -75,4 +75,4 @@ exclude: [docs/, Rakefile, README.md, LICENSE]
 sass:
   style: compressed
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-time-machine
