--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -10,7 +10,7 @@
 # use either an objectid (from an item in this collect), a relative location of an image in this repo (ex. /assets/img/feature.jpg), or a full url to an image elsewhere
 featured-image: objects/Book 1 Aunt Lu Scrapbook_Page_074.jpg
 # optional: add extra padding around collection title for a larger image feature. 
-home-title-y-padding: 15em # Default is 8em
+home-title-y-padding: 2em # Default is 8em
 # optional: change position of background image, center, top, bottom
 home-banner-image-position: top # Default is center
 
@@ -72,7 +72,7 @@ metadata-facets-fields: "subject,creator,format"
 navbar-color: navbar-light
 # navbar background color
 # Choose from bg-primary, bg-secondary, bg-success, bg-danger, bg-warning, bg-info, bg-light, bg-dark, bg-white
-navbar-background: bg-primary
+navbar-background: bg-dark
 
 # BOOTSWATCH THEMES
 # You can replace the standard Bootstrap theme with a Bootswatch (https://github.com/thomaspark/bootswatch) option
@@ -82,7 +82,7 @@ bootswatch: minty
 # THEME FONTS
 base-font-size: 1.2em
 text-color: "#FFFFFF"
-link-color: "#013220"
+link-color: "#000000"
 base-font-family: Verdana # comment out for bootstrap defaults. e.g. Roboto
 font-cdn: # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
