--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -12,7 +12,7 @@ featured-image: objects/Book 1 Aunt Lu Scrapbook_Page_074.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 20em # Default is 8em
 # optional: change position of background image, center, top, bottom
-home-banner-image-position: center # Default is center
+home-banner-image-position: top # Default is center
 
 ##########
 # ITEM PAGE
