--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ metadata: Nobili Weber1
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
- noindex: true 
+# noindex: true 
 
 ##########
 # BUILD SETTINGS 
